RESOLVED FIXED113687
[X11][BlackBerry] Check if MOZ_X11 is defined instead of XP_UNIX npruntime_internal.h
https://bugs.webkit.org/show_bug.cgi?id=113687
Summary [X11][BlackBerry] Check if MOZ_X11 is defined instead of XP_UNIX npruntime_in...
Carlos Garcia Campos
Reported 2013-04-01 01:04:29 PDT
It's assumed that all UNIX platforms use X11 for plugins, which is not the case of BlackBerry.
Attachments
Patch (1.12 KB, patch)
2013-04-01 01:07 PDT, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2013-04-01 01:07:17 PDT
Carlos Garcia Campos
Comment 2 2013-05-07 04:50:12 PDT
Ping, could someone review this simple patch, please?
WebKit Commit Bot
Comment 3 2013-05-07 08:06:59 PDT
Comment on attachment 195938 [details] Patch Clearing flags on attachment: 195938 Committed r149669: <http://trac.webkit.org/changeset/149669>
WebKit Commit Bot
Comment 4 2013-05-07 08:07:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.