[X11][BlackBerry] Check if MOZ_X11 is defined instead of XP_UNIX npruntime_internal.h https://bugs.webkit.org/show_bug.cgi?id=113687

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2013-05-07
Reviewed by Anders Carlsson.

It's assumed that all UNIX platforms use X11 for plugins, which is
not the case of BlackBerry.

* bridge/npruntime_internal.h: Use MOZ_X11 instead of XP_UNIX.

Canonical link: https://commits.webkit.org/134130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149669 268f45cc-cd09-0410-ab3c-d52691b4dbfc